tests/good/printf/print_int.go
package main;
import "fmt";

func main(){
	fmt.Print(12,13)
}

/*
== Expected program output ==
12 13
*/