tests/bad/main/with_output.go
package main

func main () int {}

/*
== Expected compiler output ==
File "./tests/bad/main/with_output.go", line 3, characters 5-9:
error: function main doesn't doesn't expect return values
*/